# dayton-interactive-map

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  NAVIGATION.md  docker-compose.prod.yml  docker-compose.yml  martin.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_interior_maps_schema.py
backend/app/: config.py  database.py  main.py
backend/app/adapters/: geocoder.py  poi_fetcher.py  storage.py
backend/app/data_import/: arcgis_rest_importer.py  base_importer.py  import_buildings.py  import_neighborhoods.py  import_parcels.py  import_pois.py  import_police_districts.py  import_railroads.py  import_sanborn.py  import_streets.py  import_transit.py  import_waterways.py  import_zoning.py  run.py
backend/app/models/: __init__.py  building.py  city.py  floor_plan.py  interior_feature.py  interior_room.py  interior_source.py  interior_wall.py  parcel.py  poi.py  railroad.py  scrape_target.py  transit.py  waterway.py  zoning.py
backend/app/routes/: buildings.py  cities.py  floor_plans.py  interior.py  interior_contributions.py  pois.py  railroads.py  search.py
backend/app/schemas/: building.py  city.py  floor_plan.py  interior.py  poi.py  search.py
backend/app/services/: building_service.py  contribution_service.py  floor_plan_classifier.py  floor_plan_extractor.py  (+8 more)
backend/scripts/: generate_pmtiles.sh  georeference_to_pmtiles.sh  init_extensions.sql  run_venue_scrape.py
backend/tests/: conftest.py  test_adapters.py  test_contribution_service.py  test_extractors.py  test_interior_routes.py  test_interior_services.py  test_models.py  test_routes.py  test_services.py
(+139 files in other folders)
